--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "async": "^2.0.1",
     "aws": "0.0.3-2",
     "express": "^4.14.0",
+    "js-yaml": "^3.6.1",
     "lodash": "^4.14.2",
     "request": "^2.74.0"
   }
