--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.14.0",
     "js-yaml": "^3.6.1",
     "lodash": "^4.14.2",
-    "request": "^2.74.0"
+    "request": "^2.74.0",
+    "underscore": "^1.8.3"
   }
 }
