--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
   "devDependencies": {
     "browserify": "^13.1.0",
     "gulp": "^3.9.1",
+    "gulp-csslint": "^0.3.1",
+    "gulp-jshint": "^2.0.1",
     "gulp-sass": "^2.3.2",
+    "jshint": "^2.8.0",
+    "jshint-stylish": "^2.2.0",
     "vinyl-source-stream": "^1.1.0"
   }
 }
