--- a/package.json
+++ b/package.json
@@ -4,18 +4,13 @@
   "description": "Example app",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/mocha/bin/mocha"
+    "test": "node_modules/.bin/mocha"
   },
   "author": "jonribeiro",
   "license": "ISC",
   "dependencies": {
-    "async": "^2.0.1",
-    "aws": "0.0.3-2",
-    "express": "^4.14.0",
     "jquery": "^3.1.0",
     "js-yaml": "^3.6.1",
-    "lodash": "^4.14.2",
-    "request": "^2.74.0",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
