--- a/package.json
+++ b/package.json
@@ -24,5 +24,17 @@
     "jshint-stylish": "^2.2.0",
     "mocha": "^3.0.2",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "testling": {
+    "harness": "mocha-bdd",
+    "files": "test/*.js",
+    "browsers": [
+      "ie/7..latest",
+      "chrome/latest",
+      "firefox/latest",
+      "safari/latest",
+      "iphone/latest",
+      "android/latest"
+    ]
   }
 }
